orchestrator/templates/orchestrator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchestrator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orchestrator 
  template:
    metadata:
      labels:
        app: orchestrator
    spec:
      containers:
      - image: abassey/orchestrator:1.1
        imagePullPolicy: Always
        name: orchestrator
        ports:
        - name: orchestrator
          containerPort: 3000
