orchestrator/templates/orchestrator-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: orchestrator
  name: orchestrator
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 3000
  selector:
    app: orchestrator
