orchestrator/templates/orchestrator-ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: orchestrator-ingress
spec:
  virtualhost:
    fqdn: orchestrator
  routes:
    - conditions:
      - prefix: /
      services:
        - name: orchestrator
          port: 80
